force-app/zurich-base/main/default/objects/TNPS__c/TNPS__c.object-meta.xml
<CustomObject>
    <description>Guarda la información de la external request INTERMEDIARY_TNPS</description>
    <label>TNPS</label>
    <nameField>
        <label>TNPS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TNPSs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>