force-app/zurich-base/main/default/objects/TNPS__c/fields/Intermediary__c.field-meta.xml
<CustomField>
    <fullName>Intermediary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relación con el mediador</description>
    <label>Intermediary</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TNPSs</relationshipLabel>
    <relationshipName>TNPS</relationshipName>
    <type>Lookup</type>
</CustomField>