force-app/zurich-base/main/default/objects/TNPS__c/fields/NumberOfSurveys__c.field-meta.xml
<CustomField>
    <fullName>NumberOfSurveys__c</fullName>
    <description>Número de encuestas</description>
    <label>Number of Surveys</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>