force-app/zurich-base/main/default/objects/TNPS__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <description>Objetivo</description>
    <label>Objective</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>