force-app/zurich-base/main/default/objects/TNPS__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Puntuación</description>
    <label>Score</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>