force-app/zurich-base/main/default/objects/TNPS__c/fields/TNPSExternalId__c.field-meta.xml
<CustomField>
    <fullName>TNPSExternalId__c</fullName>
    <description>External Id &quot;ficticio&quot; para poder hacer el upsert de los registros de la ER &quot;INTERMEDIARY_TNPS&quot;</description>
    <externalId>true</externalId>
    <label>TNPS External Id</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>